# week_9_exercises

./: README.md
Collectives/source/: main.cpp
Sync/source/: buffered.cpp  standard.cpp  synchronised.cpp
UCL/: CMakeLists.txt  ucl_1.cpp  ucl_2.cpp  ucl_3.cpp
